# eventual-rmq

./: pyproject.toml
eventual_rmq/: broker.py
scripts/: check.sh  lint.sh
tests/: test_eventual_rmq.py
