[tool.poetry]
name = "eventual-rmq"
version = "0.3.0"
description = ""
authors = ["Ivan Dmitriesvky <ivan.dmitrievsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aio-pika = "^6.8.0"
orjson = "^3.5.2"
eventual = {path = "../eventual", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poetry-dev = "^0.1.3"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
